testsuite/tests/backpack/should_fail/bkpfail07.stderr
[1 of 3] Processing p
  [1 of 1] Compiling H[sig]           ( p/H.hsig, nothing )
[2 of 3] Processing h
  [1 of 3] Compiling T                ( h/T.hs, nothing )
  [2 of 3] Compiling H                ( h/H.hs, nothing )
  [3 of 3] Compiling A[sig]           ( h/A.hsig, nothing )
[3 of 3] Processing q
  [1 of 1] Compiling A[sig]           ( q/A.hsig, nothing )

bkpfail07.bkp:6:9: error:
    • Type constructor ‘h[A=<A>]:T.T’ has conflicting definitions in the module
      and its hsig file
      Main module: data h[A=<A>]:T.T = h[A=<A>]:T.T GHC.Types.Bool
      Hsig file:  data h[A=<A>]:T.T = h[A=<A>]:T.T GHC.Types.Int
      The constructors do not match: The types for ‘h[A=<A>]:T.T’ differ
    • while checking that h[A=<A>]:H implements signature H in p[H=h[A=<A>]:H]
